# stitchlab-optimization

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/stitchlab_optimization/: __init__.py
src/stitchlab_optimization/builder/: model.py  workflow.py
src/stitchlab_optimization/logger/: file_logger.py  manager.py  sqlite_logger.py
src/stitchlab_optimization/solver/: config.py  engine.py  status.py
src/stitchlab_optimization/tools/: utils.py
src/stitchlab_optimization/tools/query/: snowflake.py
