[project]
name = "stitchlab-optimization"
version = "0.0.1"
description = "StitchLab Optimization application"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "StitchLab Team", email = "evazuliya97@gmail.com"}]
requires-python = ">=3.11,<3.14"
keywords = ["optimization", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "python-dotenv>=1.0,<2.0",
    "pyscipopt>=6.0,<7.0",
    "ortools>=9.15,<10.0",
    "gurobipy>=13.0,<14.0",
    "pandas>=2.0,<4.0",
    "psutil>=5.9,<8.0"
]

[project.urls]
Homepage = "https://github.com/eva-zuliya/stitchlab-optimization"
Repository = "https://github.com/eva-zuliya/stitchlab-optimization"
Issues = "https://github.com/eva-zuliya/stitchlab-optimization/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"
